[gd_scene load_steps=5 format=3 uid="uid://n1nywqe7i4ca"]

[ext_resource type="PackedScene" path="res://addons/quest_editor/ui_extensions/dropdown/Dropdown.tscn" id="1"]
[ext_resource type="Texture2D" uid="uid://1lj4cxqo7geh" path="res://addons/quest_editor/icons/Add.png" id="2"]
[ext_resource type="Script" path="res://addons/quest_editor/scenes/quests/QuestQuestDataRequerements.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://be386vex5xwln" path="res://addons/quest_editor/scenes/quests/QuestQuestDataRequerementsView.tscn" id="4"]

[node name="VBoxRequerements" type="VBoxContainer"]
anchor_right = 1.0
offset_bottom = 101.0
size_flags_horizontal = 3
script = ExtResource( "3" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxRequerements" type="HBoxContainer" parent="."]
offset_right = 1024.0
offset_bottom = 31.0

[node name="Label" type="Label" parent="HBoxRequerements"]
offset_top = 2.0
offset_right = 160.0
offset_bottom = 28.0
rect_min_size = Vector2(160, 0)
text = "Precompleted quest"

[node name="Quests" parent="HBoxRequerements" instance=ExtResource( "1" )]
anchor_right = 0.0
offset_left = 164.0
offset_right = 1024.0

[node name="HBoxRequerementsAdd" type="HBoxContainer" parent="."]
offset_top = 35.0
offset_right = 1024.0
offset_bottom = 66.0

[node name="Add" type="Button" parent="HBoxRequerementsAdd"]
offset_right = 20.0
offset_bottom = 31.0
rect_min_size = Vector2(20, 20)
icon = ExtResource( "2" )

[node name="Label" type="Label" parent="HBoxRequerementsAdd"]
offset_left = 24.0
offset_top = 2.0
offset_right = 136.0
offset_bottom = 28.0
text = "Requerements"

[node name="VBoxRequerementsItems" parent="." instance=ExtResource( "4" )]
anchor_right = 0.0
offset_top = 70.0
offset_right = 1024.0
offset_bottom = 101.0
